--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
                 <h2> About Me </h2>
             
                 <p>
-                    I live for creativity. <br>
+                    I am a computer programmer and musician. <br>
                     I express my inspirations through art and technology. <br>
                 </p>
+
+                <ul>
+                    <li> Favorite Hobbies: Developing applications, composing music, practicing piano </li>
+                    <li> Instruments: Piano, Clarinet, Oboe, Saxophone </li>
+                </ul>
             </div>
 
             <div style="margin-right:10%">
@@ -38,21 +43,21 @@
         <div id="projects" class="floating">
             <h2 style="margin-left:10%"> My Projects </h2>
 
-            <div style="margin-left:10%; margin-bottom:5%;">
+            <div style="border-top:1px solid white; margin-left:10%; margin-bottom:5%; margin-right:10%;">
                 <div style="display:flex; justify-content:space-between;">
                     <a href="https://sewonkim0.github.io/MemoryTrainer/"> <h3>Memory Trainer</h3> </a>
 
-                    <p style="margin-right:10%;"> February 2023 </p>
+                    <p> February 2023 </p>
                 </div>
 
                 <p> Experimental web application for improving memory retention and efficiency, inspired by vocabulary memorization strategies </p>
             </div>
 
-            <div style="margin-left:10%; margin-bottom:5%;">
+            <div style="border-top:1px solid white; margin-left:10%; margin-bottom:5%; margin-right:10%;">
                 <div style="display:flex; justify-content:space-between;">
                     <a href="https://github.com/SewonKim0/QuickNotes"> <h3>QuickNotes</h3> </a>
 
-                    <p style="margin-right:10%;"> January 2023 </p>
+                    <p> January 2023 </p>
                 </div>
 
                 <p> Lightweight notetaking application made in C# windows forms <br>
