Page updated message

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     </head>
 
     <body style="background-image:url(images/piano1double.jpg); background-size:100%; display:flex; flex-direction:column; align-items:center;">
+        <!-- Notice: New Website Link -->
+        <h2> This page has been moved. Click <a href="https://sewonkim0.github.io/portfolio/"> here </a> to visit the new page. </h2>
+        
         <div id="top" class="floating">
             <h1 style="margin-left:10%;"> SewonKim </h1>
 
